--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   ],
   "dependencies": {
     "loader-utils": "~0.2.1",
-    "es6-module-transpiler": "~0.3.3"
+    "es6-transpiler": "^0.7.13-5",
+    "es6-module-transpiler": "^0.4.0",
+    "merge": "^1.1.3"
   },
   "devDependencies": {
     "webpack-dev-server": "~0.11.0",
