--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "loader-utils": "~0.2.1",
     "es6-transpiler": "^0.7.13-5",
     "es6-module-transpiler": "^0.4.0",
-    "merge": "^1.1.3"
+    "extend": "^1.2.1"
   },
   "devDependencies": {
     "webpack-dev-server": "~0.11.0",
